syntax = "proto3";
package catalog.v1;

option go_package = "github.com/razvanmarinn/datalake/protobuf/gen/go/catalog/v1;catalogv1";

import "google/protobuf/timestamp.proto";

service CatalogService {
    // Project Management
    rpc GetProject(GetProjectRequest) returns (GetProjectResponse);

    // Job Management (Compaction, etc.)
    rpc RegisterDataFile(RegisterDataFileRequest) returns (RegisterDataFileResponse);
    rpc PollCompactionJobs(PollCompactionJobsRequest) returns (PollCompactionJobsResponse);
    rpc UpdateJobStatus(UpdateJobStatusRequest) returns (UpdateJobStatusResponse);
}

message GetProjectRequest {
    string project_name = 1;
}

message GetProjectResponse {
    string project_id = 1;
    string owner_id = 2;
    google.protobuf.Timestamp created_at = 3;
}

message PollCompactionJobsRequest {
}

message PollCompactionJobsResponse {
    string job_id = 1;
    string project_id = 2;
    string schema_name = 3;
    repeated string target_files = 4;
    string project_name = 5;
    string output_file_path = 6;
}

message UpdateJobStatusRequest {
    string job_id = 1;
    string status = 2; // e.g., "COMPLETED", "FAILED"
    string result_file_path = 3;
}

message UpdateJobStatusResponse {
    bool success = 1;
}

message RegisterDataFileRequest {
    string project_id = 1;
    string schema_name = 2;
    string block_id = 3;
    string worker_id = 4;
    string file_path = 5;
    int64 file_size = 6;
    string file_format = 7;
}

message RegisterDataFileResponse {
    bool success = 1;
}
